Version 0.3.3.2 2008-0
---------------
x On some systems, if a string is not a number, the returned number from string-->number conversion is undetermined

Version 0.3.3.1 2008-03-14
---------------
+ Basic support of threads

Version 0.3.3.0 2008-02-29
---------------
+ Base64 encode/decode
+ File::Created() and File::Modified()
x Trim() problem

Version 0.3.2.6 2008-02-09
---------------
x Was not seeking after EOF
x Win9X does not support shared reading, do not use it if Win9X

Version 0.3.2.5 2008-02-01
---------------
+ Linux/MacOS: support of 2GiB+ files
x File: Re-enabled shared reading
x Better handling of Floating point to string

Version 0.3.2.4 2008-01-09
---------------
+ Ztring::From_GUID()
x small bugfixes

Version 0.3.2.3 2007-12-10
---------------
x small bugfixes

Version 0.3.2.2 2007-11-02
---------------
x Ztring comparaison bug
x Memory leaks

Version 0.3.2.1 2007-10-07
---------------
+ BitStream_LE (Little Endian) class
+ OpenFolder_Show method for Windows
+ int128u/s
+ Win9X support does not request Microsoft unicows.lib anymore
x Win9X support was brocken, is back now
x Several small bug fixes

Version 0.3.2.0 2007-08-17
---------------
+ WxWidgets is kept out by default
x Some minor bug corrections

Version 0.3.1.7 2007-07-23
---------------
x .c files were not in source code

Version 0.3.1.6 2007-05-14
---------------
x SetFilePointerEx() to SetFilePointer() for win98 support

Version 0.3.1.5 2007-04-28
---------------
+ Ztring::Date_From_Seconds_1601() added
x Some bugfixes and warning corrections, mainly for 64-bit port

Version 0.3.1.4 2007-02-05
---------------
x UTF16 with BOM corrupted handling

Version 0.3.1.3 2006-12-22
---------------
+ UTF16BE Handling
+ MacIntel adaptation

Version 0.3.1.2 2006-12-07
---------------
x Some errors in Ztring
x BitStream::Peek() corrected

Version 0.3.1.1 2006-11-24
---------------
x BitStream : error with some last bits
+ ZtringListList and ZtringList : number of element limit added
