@@ -1,6 +1,7 @@
 Version 0.3.3.2 2008-0
 ---------------
 x On some systems, if a string is not a number, the returned number from string-->number conversion is undetermined
+x Non-unicode version: invalid read with assign()
 
 Version 0.3.3.1 2008-03-14
 ---------------
